Test/2-2_cluster.clu
Cluster size 2
Cluster number 20102        # E:      Factor:7  P:  , Ori size:2    Sub:2    From:2           
   2    2     fam_2_1           1-119      1   leng: 118
   2    2     fam_2_2           1-119      1   leng: 118
